OpenLGTV BCM: separate lgapp/lgres mounts from rc.mount2 to rc.mount3, add break signal trap before mounting lgapp and lgfont. boot scripts performance improvements (sth around 1 second), optimisations of settings.cgi and other webui pages
git-svn-id: http://svn.openlgtv.org.ru@755 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/rc.d/rc.settings
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/rc.d/rc.settings
@@ -68,7 +68,7 @@ then
     for svarx in `cat /etc/default/settings.default | awk -F= '{print $1 "="}'`
     do
 	svar=`echo $svarx | awk -F= '{print $1 "="}'`
-	if [ -z "`grep $svar /mnt/user/cfg/settings`" ]
+	if [ -z "`grep -m 1 $svar /mnt/user/cfg/settings`" ]
 	then
 	    echo "OpenLGTV_BCM-INFO: adding $svarx to /mnt/user/cfg/settings"
 	    echo "$svarx" >> /mnt/user/cfg/settings
@@ -81,7 +81,7 @@ then
     #sed -i $settings_sed /mnt/user/cfg/settings.default
     settings_egrep="^NONEXISTENT"
     for svar in $settings_depreciated; do settings_egrep="^$svar=|$settings_egrep"; done
-    cat /mnt/user/cfg/settings | egrep -v "$settings_egrep" > /tmp/settings.tmp
+    egrep -v "$settings_egrep" /mnt/user/cfg/settings > /tmp/settings.tmp
     cat /tmp/settings.tmp > /mnt/user/cfg/settings
     rm /tmp/settings.tmp
 fi
