OpenLGTV BCM: change mime type for video files
git-svn-id: http://svn.openlgtv.org.ru@762 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -3,10 +3,10 @@ D:*
 *.sh:/bin/sh
 *.cgi:/bin/haserl
 #.avi:video/x-msvideo
-.avi:video/mp4
-.mkv:video/mp4
-.mpg:video/mp4
-.mp4:video/mp4
-.ts:video/mp4
-.m2ts:video/mp4
-.wmv:video/mp4
+.avi:application/x-netcast-av
+.mkv:application/x-netcast-av
+.mpg:application/x-netcast-av
+.mp4:application/x-netcast-av
+.ts:application/x-netcast-av
+.m2ts:application/x-netcast-av
+.wmv:application/x-netcast-av
