OpenLGTV BCM: warning - break: network shares mount rewrite to make support for multiple shares, not finished yet
git-svn-id: http://svn.openlgtv.org.ru@772 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
@@ -28,7 +28,9 @@ enable_divx_preview = 1
 # It's the only directory that will be explored in the integrated player in this case.
 enable_auto_mount = 1
 
+# Listening IP address and port for telnet connection to OPENRELEASE
 #debug_ipaddr = 192.168.100.99
 #debug_port = 99
 
+# uinput events from remote control - just for testing, makes double (and wrong) keycodes generation in DirectFB apps
 enable_uinput = 0
