OpenLGTV BCM: fixes - WebUI click on checkboxes with OK button, minor rc.netcast typo, add netcast_force_copy_* into depreciated settings
git-svn-id: http://svn.openlgtv.org.ru@795 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/rc.d/rc.settings
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/rc.d/rc.settings
@@ -11,7 +11,7 @@ then
     ###touch /mnt/user/cfg/settings
 fi
 
-settings_depreciated="confirmations rebooting netcast_kill_browser netcast_keyboard_mouse_support use_samsung_ywe_instead_of_lg"
+settings_depreciated="confirmations rebooting netcast_kill_browser netcast_keyboard_mouse_support use_samsung_ywe_instead_of_lg force_copy_config_netcast force_copy_config_ywe"
 
 if [ "$uver" != "$ver" -o ! -f "/mnt/user/cfg/settings" ]
 then
