OpenLGTV BCM: OPENRELEASE upgrade - it's now possible to bind scripts/executables actions to remote control buttons
git-svn-id: http://svn.openlgtv.org.ru@826 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
@@ -9,7 +9,7 @@ input = /tmp/openrelease.in
 #input = NULL
 
 # output - file that is used for stdout redirection.
-#          Default: disabled
+#          Default: NULL
 output = /tmp/openrelease.out
 #output = NULL
 
@@ -29,8 +29,12 @@ enable_divx_preview = 1
 enable_auto_mount = 1
 
 # Listening IP address and port for telnet connection to OPENRELEASE
+# ipaddr for debug service
+# Default: NULL
 #debug_ipaddr = 192.168.100.99
+# port for debug service
+# Default: 0
 #debug_port = 99
 
 # uinput events from remote control - just for testing, makes double (and wrong) keycodes generation in DirectFB apps
-enable_uinput = 0
+#enable_uinput = 0 # not used in current version
