LGMOD_S7: 1.0.11 alpha 1 - file manager by xeros, lginit for different S7 models, info in info.sh script (rewriten), openrel SYSTEM action (example), auto restore nvram, input modules in default module.sh, timezone variable...; changelog updated
git-svn-id: http://svn.openlgtv.org.ru@828 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/rootfs-S6/etc/openrelease/default-openrelease_keymap.cfg
+++ b/lgmod_s7/trunk/rootfs-S6/etc/openrelease/default-openrelease_keymap.cfg
@@ -11,6 +11,7 @@ K_ENERGY_SAVING = default
 #K_ENERGY_SAVING = screen_mute
 K_POWER = default
 #K_POWER = soft_poweroff
+#K_POWER = SYSTEM:/sbin/reboot
 K_INPUT = default
 K_RATIO = default
 K_TV_RAD = default
