LGMOD_S7: 1.0.11 alpha 1 - dfbterm demo - vsd4_select action (openrelease), /home/lgmod/key_dfbterm.sh
git-svn-id: http://svn.openlgtv.org.ru@833 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/trunk/rootfs/etc/openrelease/default-openrelease_keymap.cfg
+++ b/lgmod_s7/trunk/rootfs/etc/openrelease/default-openrelease_keymap.cfg
@@ -6,6 +6,7 @@
 # - screen_mute - switch off screen
 # - soft_poweroff - switch off screen + lock control + volume mute
 # - osd_select - enable/disable osd
+# - vosd4_select - enable/disable vosd[4]
 
 K_ENERGY_SAVING = default
 #K_ENERGY_SAVING = screen_mute
@@ -15,6 +16,7 @@ K_POWER = default
 K_INPUT = default
 K_RATIO = default
 #K_RATIO = SYSTEM:/home/lgmod/key_kill-stagecraft.sh
+#K_RATIO = SYSTEM:/home/lgmod/key_dfbterm.sh
 K_TV_RAD = default
 #K_TV_RAD = K_IN_START
 K_Q_MENU = default
@@ -31,6 +33,7 @@ K_AV_MODE = default
 K_VOL_UP = default
 K_VOL_DOWN = default
 K_FAV_MARK = default
+#K_FAV_MARK = vosd4_select
 K_MUTE = default
 K_PAGE_UP = default
 K_PAGE_DOWN = default
