OpenLGTV BCM: upgrade OPENRELEASE to version 2.1.2-7-g5dd1fe0 with vosd4_select action
git-svn-id: http://svn.openlgtv.org.ru@845 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -6,6 +6,7 @@
 # - screen_mute - switch off screen
 # - soft_poweroff - switch off screen + lock control + volume mute
 # - osd_select - enable/disable osd
+# - vosd4_select - enable/disable vosd4 (DirectFB apps graphic layer)
 
 K_ENERGY_SAVING = default
 #K_ENERGY_SAVING = screen_mute
