OpenLGTV BCM: some OPENRELEASE keymap examples
git-svn-id: http://svn.openlgtv.org.ru@846 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -43,7 +43,7 @@ K_7 = default
 K_8 = default
 K_9 = default
 K_LIST = default
-#K_LIST = K_X58 # Yahoo Widgets = 0x58?
+#K_LIST = K_X58 # Yahoo Widgets
 K_Q_VIEW = default
 K_RED_KEY = default
 K_GREEN_KEY = default
@@ -54,6 +54,7 @@ K_T_OPT = default
 K_SUBTITLE = default
 K_SIMPLINK = default
 #K_SIMPLINK = K_IN_START
+#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/fm.cgi?type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2"
 K_FREEZE = default
 K_NETCAST = default
 K_EXIT = default
@@ -63,6 +64,7 @@ K_PAUSE = default
 K_FORWARD = default
 K_BACKWARD = default
 K_AD = default
+#K_AD = SYSTEM: /scripts/konfabulator-exec.sh &
 K_TILT = default
 K_IN_STOP = default
 K_IN_START = default
