OpenLGTV BCM: OPENRELEASE upgrade - add games_menu action
git-svn-id: http://svn.openlgtv.org.ru@847 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -7,6 +7,7 @@
 # - soft_poweroff - switch off screen + lock control + volume mute
 # - osd_select - enable/disable osd
 # - vosd4_select - enable/disable vosd4 (DirectFB apps graphic layer)
+# - games_menu - open games menu
 
 K_ENERGY_SAVING = default
 #K_ENERGY_SAVING = screen_mute
@@ -26,6 +27,7 @@ K_OK = default
 K_RETURN_EXIT = default
 K_INFO = default
 K_AV_MODE = default
+#K_AV_MODE = games_menu
 K_VOL_UP = default
 K_VOL_DOWN = default
 K_FAV_MARK = default
