OpenLGTV BCM: OPENRELEASE upgrade to 2.1.2-9-g9f09795+games+more_keys
git-svn-id: http://svn.openlgtv.org.ru@848 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -2,13 +2,29 @@
 # - default - default action
 # - K_<KEY> - defautl action for key <KEY>
 # - K_X<KEY_CODE> - key with keycode (<KEYCODE> in hex: for example AA)
-# - SYSTEM: <COMMAND> - execute `sh -c <COMMAND>'
+# - SYSTEM: <COMMAND> - execute `sh -c <COMMAND>' (use '&' at the end of scripts which run long or don't go to background to not hold other keypresses until the script finishes)
 # - screen_mute - switch off screen
 # - soft_poweroff - switch off screen + lock control + volume mute
 # - osd_select - enable/disable osd
-# - vosd4_select - enable/disable vosd4 (DirectFB apps graphic layer)
-# - games_menu - open games menu
+# - vosd4_select - enable/disable vosd4 (BCM and SATURN7 only) (DirectFB apps graphic layer)
+# - games_menu - open games menu (BCM and SATURN7 only)
 
+# Some more actions for buttons which have their own keycodes but no buttons on remote:
+#	K_RATIO_4_3,		0x76
+#	K_RATIO_16_9,		0x77
+#	K_RATIO_ZOOM,		0xaf
+#	K_TV,			0xd6
+#	K_INPUT_AV1,		0x5a
+#	K_INPUT_AV2,		0xd0
+#	K_INPUT_COMPONENT1,	0xbf
+#	K_INPUT_COMPONENT2,	0xd4
+#	K_INPUT_RGB,		0xd5
+#	K_INPUT_HDMI1,		0xce
+#	K_INPUT_HDMI2,		0xcc
+#	K_BRIGHT_UP,		0xe1
+#	K_BRIGHT_DOWN,		0xe0
+
+K_3D = default
 K_ENERGY_SAVING = default
 #K_ENERGY_SAVING = screen_mute
 K_POWER = default
@@ -57,6 +73,7 @@ K_SUBTITLE = default
 K_SIMPLINK = default
 #K_SIMPLINK = K_IN_START
 #K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/fm.cgi?type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2"
+K_WIDGETS = default
 K_FREEZE = default
 K_NETCAST = default
 K_EXIT = default
@@ -65,8 +82,11 @@ K_PLAY = default
 K_PAUSE = default
 K_FORWARD = default
 K_BACKWARD = default
+K_REC = default
+K_LIVETV = default
 K_AD = default
 #K_AD = SYSTEM: /scripts/konfabulator-exec.sh &
+K_APP = default
 K_TILT = default
 K_IN_STOP = default
 K_IN_START = default
