--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -72,7 +72,7 @@ K_T_OPT = default
 K_SUBTITLE = default
 K_SIMPLINK = default
 #K_SIMPLINK = K_IN_START
-#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/fm.cgi?type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2"
+#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/fm.cgi?type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2" &
 K_WIDGETS = default
 K_FREEZE = default
 K_NETCAST = default
