OpenLGTV BCM: start work on pin authorization to WebUI, index.cgi is now default instead of index.html, rc.ywe and /mnt/ywe* cleanup
git-svn-id: http://svn.openlgtv.org.ru@861 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -1,8 +1,11 @@
 A:127.0.0.1
 D:*
+I:index.cgi
+#P:/:http://127.0.0.1/index.cgi
 *.sh:/bin/sh
 *.cgi:/bin/haserl
 #.avi:video/x-msvideo
+#.mp4:video/mp4
 .avi:application/x-netcast-av
 .mkv:application/x-netcast-av
 .mpg:application/x-netcast-av
