OpenLGTV BCM: finish PIN authorization in WebUI, fix PAUSE button keycode for NetCast links in Internet Browser, Remote Control cover color change to look more simmilar to real remote
git-svn-id: http://svn.openlgtv.org.ru@863 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -73,6 +73,7 @@ K_SUBTITLE = default
 K_SIMPLINK = default
 #K_SIMPLINK = K_IN_START
 #K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/fm.cgi?type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2" &
+#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/auth.cgi?auth=fm.cgi&type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2" &
 K_WIDGETS = default
 K_FREEZE = default
 K_NETCAST = default
