OpenLGTV BCM: add vob/VOB to mime-types for FileManager
git-svn-id: http://svn.openlgtv.org.ru@864 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -13,3 +13,5 @@ I:index.cgi
 .ts:application/x-netcast-av
 .m2ts:application/x-netcast-av
 .wmv:application/x-netcast-av
+.vob:application/x-netcast-av
+.VOB:application/x-netcast-av
