--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -7,11 +7,18 @@ I:index.cgi
 #.avi:video/x-msvideo
 #.mp4:video/mp4
 .avi:application/x-netcast-av
+.AVI:application/x-netcast-av
 .mkv:application/x-netcast-av
+.MKV:application/x-netcast-av
 .mpg:application/x-netcast-av
+.MPG:application/x-netcast-av
 .mp4:application/x-netcast-av
+.MP4:application/x-netcast-av
 .ts:application/x-netcast-av
+.TS:application/x-netcast-av
 .m2ts:application/x-netcast-av
+.M2TS:application/x-netcast-av
 .wmv:application/x-netcast-av
+.WMV:application/x-netcast-av
 .vob:application/x-netcast-av
 .VOB:application/x-netcast-av
