OpenLGTV BCM: add EtherWake WebUI submenu, some cleanup of old comments, need to test both EtherWake and Network Shares edit via WebUI
git-svn-id: http://svn.openlgtv.org.ru@873 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -6,19 +6,25 @@ I:index.cgi
 *.cgi:/bin/haserl
 #.avi:video/x-msvideo
 #.mp4:video/mp4
+.asf:application/x-netcast-av
+.ASF:application/x-netcast-av
 .avi:application/x-netcast-av
 .AVI:application/x-netcast-av
-.mkv:application/x-netcast-av
-.MKV:application/x-netcast-av
-.mpg:application/x-netcast-av
-.MPG:application/x-netcast-av
-.mp4:application/x-netcast-av
-.MP4:application/x-netcast-av
-.ts:application/x-netcast-av
-.TS:application/x-netcast-av
+.dat:application/x-netcast-av
+.DAT:application/x-netcast-av
 .m2ts:application/x-netcast-av
 .M2TS:application/x-netcast-av
-.wmv:application/x-netcast-av
-.WMV:application/x-netcast-av
+.mkv:application/x-netcast-av
+.MKV:application/x-netcast-av
+.mp4:application/x-netcast-av
+.MP4:application/x-netcast-av
+.mpeg:application/x-netcast-av
+.MPEG:application/x-netcast-av
+.mpg:application/x-netcast-av
+.MPG:application/x-netcast-av
+.ts:application/x-netcast-av
+.TS:application/x-netcast-av
 .vob:application/x-netcast-av
 .VOB:application/x-netcast-av
+.wmv:application/x-netcast-av
+.WMV:application/x-netcast-av
