OpenLGTV BCM: MTS file extension added for playback via FileManager
git-svn-id: http://svn.openlgtv.org.ru@876 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -22,6 +22,8 @@ I:index.cgi
 .MPEG:application/x-netcast-av
 .mpg:application/x-netcast-av
 .MPG:application/x-netcast-av
+.mts:application/x-netcast-av
+.MTS:application/x-netcast-av
 .ts:application/x-netcast-av
 .TS:application/x-netcast-av
 .vob:application/x-netcast-av
