OpenLGTV BCM: move haserl from /bin to /usr/bin (but keep symlink for compatibility), change logs path in FileManager to improve portability between OpenLGTV BCM and LGMOD S7
git-svn-id: http://svn.openlgtv.org.ru@949 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -3,7 +3,7 @@ D:*
 I:index.cgi
 #P:/:http://127.0.0.1/index.cgi
 *.sh:/bin/sh
-*.cgi:/bin/haserl
+*.cgi:/usr/bin/haserl
 #.avi:video/x-msvideo
 #.mp4:video/mp4
 .asf:application/x-netcast-av
