OpenLGTV BCM: libopenrelease.so.2.1.2-11-g70a35e8+sirius upload into addons
git-svn-id: http://svn.openlgtv.org.ru@992 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
@@ -38,3 +38,6 @@ enable_auto_mount = 1
 
 # uinput events from remote control - just for testing, makes double (and wrong) keycodes generation in DirectFB apps
 #enable_uinput = 0 # not used in current version
+
+# script to execute at poweroff event
+# poweroff_script = ....
