LGMOD S7/OpenLGTV BCM: info.sh: enable drop_caches on BCM for testing, OpenLGTV BCM: new OPENRELEASE in addons, /mnt/lg/{res/cert,widevine} mountpoints, load /etc/profile in chrooted installer rootfs
git-svn-id: http://svn.openlgtv.org.ru@993 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
@@ -41,3 +41,6 @@ enable_auto_mount = 1
 
 # script to execute at poweroff event
 # poweroff_script = ....
+
+# force Debug Status
+# debug_state = DEBUG|EVENT|RELEASE
