OpenLGTV BCM: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743, /etc/profile fixes, FLV and F4V support in FileManager on Korean models
git-svn-id: http://svn.openlgtv.org.ru@998 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -12,6 +12,10 @@ I:index.cgi
 .AVI:application/x-netcast-av
 .dat:application/x-netcast-av
 .DAT:application/x-netcast-av
+.flv:video/x-flv
+.FLV:video/x-flv
+.f4v:video/x-flv
+.F4V:video/x-flv
 .m2ts:application/x-netcast-av
 .M2TS:application/x-netcast-av
 .mkv:application/x-netcast-av
