--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
@@ -39,8 +39,8 @@ enable_auto_mount = 1
 # uinput events from remote control - just for testing, makes double (and wrong) keycodes generation in DirectFB apps
 #enable_uinput = 0 # not used in current version
 
-# script to execute at poweroff event
-# poweroff_script = ....
+# script to be executed before poweroff
+poweroff_script = NULL
 
-# force Debug Status
-# debug_state = DEBUG|EVENT|RELEASE
+# RELEASE debug state (BCM and SATURN7 only)
+debug_state = EVENT
