OpenLGTV BCM: error 404 web page handling not accessible files without making web browser stuck without accepting remote control, opkg repository preparation
git-svn-id: http://svn.openlgtv.org.ru@1016 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/opkg/opkg.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/opkg/opkg.conf
@@ -1,7 +1,12 @@
-# currently there's no repository with packages for OpenLGTV BCM so use OpenWRT repository that mostly fits for now
-src/gz packages http://downloads.openwrt.org/kamikaze/8.09.2/brcm47xx/packages
+# as there are currently no packages in OpenLGTV BCM repository so use OpenWRT repository for testing
+src/gz openlgtv_bcm http://svn.openlgtv.org.ru/OpenLGTV_BCM/trunk/addons/packages
+src/gz openwrt_kamikaze http://downloads.openwrt.org/kamikaze/8.09.2/brcm47xx/packages
+#src/gz openwrt_backfire http://downloads.openwrt.org/backfire/10.03.1/brcm47xx/packages
 dest root /tmp/extroot
 dest ram /tmp
-#lists_dir ext /var/opkg-lists
 lists_dir ext /tmp/extroot/var/lib/opkg/lists
-#option overlay_root /overlay
+#option cache /tmp/extroot/var/lib/opkg/cache
+option overlay_root /tmp/extroot
+#arch all 1
+#arch noarch 1
+#arch mipsel 10
