OpenLGTV BCM: rc.poweroff and rc.initd scripts, support for init.d and poweroff.d dirs on user partition, usb stick and extroot
git-svn-id: http://svn.openlgtv.org.ru@1024 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -2,7 +2,7 @@ A:127.0.0.1
 D:*
 I:index.cgi
 #P:/:http://127.0.0.1/index.cgi
-E404:/var/www/e404.html
+E404:/var/www/errors/e404.html
 *.sh:/bin/sh
 *.cgi:/usr/bin/haserl
 #.avi:video/x-msvideo
