--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease.cfg
@@ -40,7 +40,8 @@ enable_auto_mount = 1
 #enable_uinput = 0 # not used in current version
 
 # script to be executed before poweroff
-poweroff_script = NULL
+#poweroff_script = NULL
+poweroff_script = /etc/rc.d/rc.poweroff
 
 # RELEASE debug state (BCM and SATURN7 only)
 debug_state = EVENT
