OpenLGTV BCM: FileManager: save and restore last used paths
git-svn-id: http://svn.openlgtv.org.ru@1046 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -24,11 +24,37 @@
 #	K_BRIGHT_UP,		0xe1
 #	K_BRIGHT_DOWN,		0xe0
 
+# some examples of customization:
+# assign SimpLink button to FileManager (without PIN authorization, with /mnt/usb1 and /mnt/usb2 paths in panels)
+#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/fm.cgi?type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2" &
+# assign SimpLink button to FileManager (without PIN authorization, try to restore previously opened paths)
+#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/fm.cgi?type=restore_last&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2" &
+# assign SimpLink button to FileManager (with PIN authorization, try to restore previously opened paths)
+#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/auth.cgi?auth=fm.cgi&type=restore_last&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2" &
+# assign InStart button action to SimpLink
+#K_SIMPLINK = K_IN_START
+# disable/enable screen on EnergySaving button press
+#K_ENERGY_SAVING = screen_mute
+# soft_poweroff mode on Power button
+#K_POWER = soft_poweroff
+# games menu on AV button press
+#K_AV_MODE = games_menu
+# assign button action with hex keycode 0x58 (Widgets) to List button
+#K_LIST = K_X58 # Yahoo Widgets
+# Yahoo Widgets starting script on AD button
+#K_AD = SYSTEM: /scripts/konfabulator-exec.sh &
+# alternative NetCast menu on Guide button
+#K_GUIDE = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/browser/links.html" &
+# custom local HTML page on App button (custom page can be also *.cgi (haserl script) or *.sh (shell script))
+#K_APP = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/user/custom_page.html" &
+# custom remote web page (you'll have to handle remote control buttons in JS code)
+#K_APP = SYSTEM: /mnt/browser/run3556 "http://url.to.page/" &
+# execute custom script/application on App button press
+#K_APP = SYSTEM: /mnt/user/scripts/some_script &
+
 K_3D = default
 K_ENERGY_SAVING = default
-#K_ENERGY_SAVING = screen_mute
 K_POWER = default
-#K_POWER = soft_poweroff
 K_INPUT = default
 K_RATIO = default
 K_TV_RAD = default
@@ -43,7 +69,6 @@ K_OK = default
 K_RETURN_EXIT = default
 K_INFO = default
 K_AV_MODE = default
-#K_AV_MODE = games_menu
 K_VOL_UP = default
 K_VOL_DOWN = default
 K_FAV_MARK = default
@@ -61,7 +86,6 @@ K_7 = default
 K_8 = default
 K_9 = default
 K_LIST = default
-#K_LIST = K_X58 # Yahoo Widgets
 K_Q_VIEW = default
 K_RED_KEY = default
 K_GREEN_KEY = default
@@ -71,9 +95,6 @@ K_TEXT = default
 K_T_OPT = default
 K_SUBTITLE = default
 K_SIMPLINK = default
-#K_SIMPLINK = K_IN_START
-#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/fm.cgi?type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2" &
-#K_SIMPLINK = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/auth.cgi?auth=fm.cgi&type=related&side=l&lpth=/mnt/usb1&rpth=/mnt/usb2" &
 K_WIDGETS = default
 K_FREEZE = default
 K_NETCAST = default
@@ -86,7 +107,6 @@ K_BACKWARD = default
 K_REC = default
 K_LIVETV = default
 K_AD = default
-#K_AD = SYSTEM: /scripts/konfabulator-exec.sh &
 K_APP = default
 K_TILT = default
 K_IN_STOP = default
