OpenLGTV BCM: more IR codes in irkeymap.cfg
git-svn-id: http://svn.openlgtv.org.ru@1081 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/irkeymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/irkeymap.cfg
@@ -64,8 +64,8 @@ K_INPUT_COMPONENT2=d4
 K_INPUT_RGB=d5
 K_INPUT_HDMI1=ce
 K_INPUT_HDMI2=cc
-K_BRIGHT_UP=e1
-K_BRIGHT_DOWN=e0
+K_BRIGHT_UP=e0
+K_BRIGHT_DOWN=e1
 K_GUIDE=ab
 K_3D=dc
 K_WIDGETS=58
@@ -74,3 +74,15 @@ K_BACKWARD=8f
 K_REC=bd
 K_LIVETV=9e
 K_APP=9f
+
+# others, from other TV platforms:
+K_DA=50
+K_I_II=0a
+K_SLEEP=0e
+K_REVEAL=2a
+K_TIME=26
+K_UPDATE=62
+K_INDEX=70
+K_PREV=b2
+K_NEXT=b3
+K_DVR=7c
