OpenLGTV BCM: fixes & improvements to installer (arrange text strings up to 80 chars, fix running, fix complete nanddump backup), reverted order of media in you.cgi, tvp.cgi can now use MSDL for media playback (play button), rss.cgi fixes and improvements (NetPlayer, iPtak,...), iPtak can finally show covers (images are transcoded on-the-fly with jpeg.sh+jpegtrans+libjpeg-turbo62), get category images in iPtak directly from server, fix time updates
git-svn-id: http://svn.openlgtv.org.ru@1097 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -7,6 +7,8 @@ E404:/var/www/errors/e404.html
 *.cgi:/usr/bin/haserl
 #.avi:video/x-msvideo
 #.mp4:video/mp4
+.3gp:application/x-netcast-av
+.3GP:application/x-netcast-av
 .asf:application/x-netcast-av
 .ASF:application/x-netcast-av
 .avi:application/x-netcast-av
