OpenLGTV BCM: try to add few more media file extensions to FileManager, issues list
git-svn-id: http://svn.openlgtv.org.ru@1100 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -7,22 +7,32 @@ E404:/var/www/errors/e404.html
 *.cgi:/usr/bin/haserl
 #.avi:video/x-msvideo
 #.mp4:video/mp4
+# tested: 3gp (video:yes, audio(AMR NB):no); asf,avi,mkv,mp3,mp4,mpeg/mpg,mts,wmv (all OK), flv/f4v (only Korean fw), m2ts/ts (some works, some can crash RELEASE)
+# not tested: aac,dat,flac,m4a,mov,ogg,vob,wma
 .3gp:application/x-netcast-av
 .3GP:application/x-netcast-av
+.aac:application/x-netcast-av
+.AAC:application/x-netcast-av
 .asf:application/x-netcast-av
 .ASF:application/x-netcast-av
 .avi:application/x-netcast-av
 .AVI:application/x-netcast-av
 .dat:application/x-netcast-av
 .DAT:application/x-netcast-av
+.flac:application/x-netcast-av
+.FLAC:application/x-netcast-av
 .flv:video/x-flv
 .FLV:video/x-flv
 .f4v:video/x-flv
 .F4V:video/x-flv
 .m2ts:application/x-netcast-av
 .M2TS:application/x-netcast-av
+.m4a:application/x-netcast-av
+.M4A:application/x-netcast-av
 .mkv:application/x-netcast-av
 .MKV:application/x-netcast-av
+.mov:application/x-netcast-av
+.MOV:application/x-netcast-av
 .mp4:application/x-netcast-av
 .MP4:application/x-netcast-av
 .mpeg:application/x-netcast-av
@@ -31,9 +41,13 @@ E404:/var/www/errors/e404.html
 .MPG:application/x-netcast-av
 .mts:application/x-netcast-av
 .MTS:application/x-netcast-av
+.ogg:application/x-netcast-av
+.OGG:application/x-netcast-av
 .ts:application/x-netcast-av
 .TS:application/x-netcast-av
 .vob:application/x-netcast-av
 .VOB:application/x-netcast-av
+.wma:application/x-netcast-av
+.WMA:application/x-netcast-av
 .wmv:application/x-netcast-av
 .WMV:application/x-netcast-av
