OpenLGTV BCM: get rid of error message of httpd.conf
git-svn-id: http://svn.openlgtv.org.ru@1101 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -7,8 +7,8 @@ E404:/var/www/errors/e404.html
 *.cgi:/usr/bin/haserl
 #.avi:video/x-msvideo
 #.mp4:video/mp4
-# tested: 3gp (video:yes, audio(AMR NB):no); asf,avi,mkv,mp3,mp4,mpeg/mpg,mts,wmv (all OK), flv/f4v (only Korean fw), m2ts/ts (some works, some can crash RELEASE)
-# not tested: aac,dat,flac,m4a,mov,ogg,vob,wma
+#tested: 3gp (video:yes, audio(AMR NB):no); asf,avi,mkv,mp3,mp4,mpeg/mpg,mts,wmv (all OK), flv/f4v (only Korean fw), m2ts/ts (some works, some crash RELEASE)
+#not tested: aac,dat,flac,m4a,mov,ogg,vob,wma
 .3gp:application/x-netcast-av
 .3GP:application/x-netcast-av
 .aac:application/x-netcast-av
