LGMOD S7/OpenLGTV BCM: info.sh update to grab OPENRELEASE/OpenLGTV BCM configs + more paths listed
git-svn-id: http://svn.openlgtv.org.ru@1102 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -9,6 +9,7 @@ E404:/var/www/errors/e404.html
 #.mp4:video/mp4
 #tested: 3gp (video:yes, audio(AMR NB):no); asf,avi,mkv,mp3,mp4,mpeg/mpg,mts,wmv (all OK), flv/f4v (only Korean fw), m2ts/ts (some works, some crash RELEASE)
 #not tested: aac,dat,flac,m4a,mov,ogg,vob,wma
+#wont work: flv (outside of Korea), rmvb
 .3gp:application/x-netcast-av
 .3GP:application/x-netcast-av
 .aac:application/x-netcast-av
