--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/httpd.conf
@@ -7,9 +7,10 @@ E404:/var/www/errors/e404.html
 *.cgi:/usr/bin/haserl
 #.avi:video/x-msvideo
 #.mp4:video/mp4
-#tested: 3gp (video:yes, audio(AMR NB):no); asf,avi,mkv,mp3,mp4,mpeg/mpg,mts,wmv (all OK), flv/f4v (only Korean fw), m2ts/ts (some works, some crash RELEASE)
-#not tested: aac,dat,flac,m4a,mov,ogg,vob,wma
-#wont work: flv (outside of Korea), rmvb
+#tested: 3gp (video:yes, audio(AMR NB):no); aac,asf,avi,m4a,mkv,mp3,mp4,mpeg/mpg,mts,wma,wmv (all OK),
+#tested: flv/f4v (only Korea), mov (some works, others show error after buffering),
+#tested: m2ts/ts (some works, others crash RELEASE), vob (encrypted crash RELEASE, others work),
+#doesnt work: dat (vcd), flac, flv (outside of Korea), rmvb, ogg
 .3gp:application/x-netcast-av
 .3GP:application/x-netcast-av
 .aac:application/x-netcast-av
