--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -45,6 +45,8 @@
 #K_AD = SYSTEM: /scripts/konfabulator-exec.sh &
 # alternative NetCast menu on Guide button
 #K_GUIDE = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/browser/links.html" &
+# alternative NetCast menu on Guide button with splash message (override black screen while waiting for icons to show up)
+#K_GUIDE = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/splash.cgi?redirectURL=http://127.0.0.1:88/browser/links.html" &
 # custom local HTML page on App button (custom page can be also *.cgi (haserl script) or *.sh (shell script))
 #K_APP = SYSTEM: /mnt/browser/run3556 "http://127.0.0.1:88/user/custom_page.html" &
 # custom remote web page (you'll have to handle remote control buttons in JS code)
