OpenLGTV BCM: fixes that didn't go cleanly into previous commit
git-svn-id: http://svn.openlgtv.org.ru@1151 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/tags/0.5.0-rc1/OpenLGTV_BCM-src/etc/opkg/opkg.conf
+++ b/OpenLGTV_BCM/tags/0.5.0-rc1/OpenLGTV_BCM-src/etc/opkg/opkg.conf
@@ -1,5 +1,5 @@
 # as there are currently no packages in OpenLGTV BCM repository so use OpenWRT repository for testing
-src/gz openlgtv_bcm http://svn.openlgtv.org.ru/OpenLGTV_BCM/trunk/addons/packages
+src/gz openlgtv_bcm http://svn.openlgtv.org.ru/OpenLGTV_BCM/tags/0.5.0-rc1/addons/packages
 src/gz openwrt_kamikaze http://downloads.openwrt.org/kamikaze/8.09.2/brcm47xx/packages
 #src/gz openwrt_backfire http://downloads.openwrt.org/backfire/10.03.1/brcm47xx/packages
 dest root /tmp/extroot
