OpenLGTV BCM: update IR codes in irkeymap.cfg
git-svn-id: http://svn.openlgtv.org.ru@1173 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/irkeymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/irkeymap.cfg
@@ -1,11 +1,13 @@
 K_ENERGY_SAVING=95
 K_POWER=08
+K_POWER_ON=c4
+K_POWER_OFF=c5
 K_INPUT=0b
 K_RATIO=79
 K_RATIO_4_3=76
 K_RATIO_16_9=77
 K_RATIO_ZOOM=af
-K_TV_RAD=f0
+K_TV_RAD=0f
 K_TV=d6
 K_Q_MENU=45
 K_MENU=43
@@ -59,11 +61,24 @@ K_POWERONLY=fe
 K_EZ_ADJUST=ff
 K_INPUT_AV1=5a
 K_INPUT_AV2=d0
+K_INPUT_AV3=d1
+K_INPUT_AV4=d2
+K_INPUT_AV5=cf
 K_INPUT_COMPONENT1=bf
 K_INPUT_COMPONENT2=d4
-K_INPUT_RGB=d5
+K_INPUT_COMPONENT3=d9
+K_INPUT_HDMI_RGB=c6
+K_INPUT_HDMI=c7
 K_INPUT_HDMI1=ce
 K_INPUT_HDMI2=cc
+K_INPUT_HDMI3=e9
+K_INPUT_HDMI4=da
+K_INPUT_RGB=d5
+K_INPUT_RGB1=98
+K_INPUT_RGB_DTV=d7
+K_INPUT_SVIDEO=51
+K_INPUT_SVIDEO1=d8
+K_INPUT_SVIDEO2=d3
 K_BRIGHT_UP=e0
 K_BRIGHT_DOWN=e1
 K_GUIDE=ab
@@ -75,14 +90,31 @@ K_REC=bd
 K_LIVETV=9e
 K_APP=9f
 
-# others, from other TV platforms:
+# others, from other platforms (not tested):
+K_AUTOCONF=99
+K_PICTURE=4d
+K_AUDIO=52
+K_CC=47
 K_DA=50
 K_I_II=0a
 K_SLEEP=0e
 K_REVEAL=2a
 K_TIME=26
 K_UPDATE=62
+K_SIZE=64
 K_INDEX=70
 K_PREV=b2
 K_NEXT=b3
-K_DVR=7c
+K_DVR_HOME_USB=7c
+K_TV_RADIO=f0
+K_T_MODE=22
+K_MIX=24
+K_DASH_LIST=4c
+K_XSTUDIO=c8
+K_MC_EJECT=ca
+K_VOL_30=85
+K_VOL_50=86
+K_VOL_100=87
+K_SHOPMODE=a0
+K_ADJUST=cb
+K_DISABLE_KEYPAD=f3
