--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/openrelease/openrelease_keymap.cfg
@@ -23,6 +23,7 @@
 #	K_INPUT_HDMI2,		0xcc
 #	K_BRIGHT_UP,		0xe1
 #	K_BRIGHT_DOWN,		0xe0
+# For more keycodes check /etc/irkeymap.cfg file
 
 # some examples of customization:
 # assign SimpLink button to FileManager (without PIN authorization, with /mnt/usb1 and /mnt/usb2 paths in panels)
