OpenLGTV BCM: irkeymap.cfg update with tested keycodes
git-svn-id: http://svn.openlgtv.org.ru@1174 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/irkeymap.cfg
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/irkeymap.cfg
@@ -47,6 +47,7 @@ K_SUBTITLE=39
 K_SIMPLINK=7e
 K_FREEZE=65
 K_NETCAST=59
+K_WIDGETS=58
 K_EXIT=5b
 K_STOP=b1
 K_PLAY=b0
@@ -83,21 +84,25 @@ K_BRIGHT_UP=e0
 K_BRIGHT_DOWN=e1
 K_GUIDE=ab
 K_3D=dc
-K_WIDGETS=58
 K_FORWARD=8e
 K_BACKWARD=8f
 K_REC=bd
 K_LIVETV=9e
 K_APP=9f
-
-# others, from other platforms (not tested):
-K_AUTOCONF=99
 K_PICTURE=4d
 K_AUDIO=52
-K_CC=47
-K_DA=50
 K_I_II=0a
 K_SLEEP=0e
+K_DVR_HOME_USB=7c
+K_TV_RADIO=f0
+K_DASH_LIST=4c
+K_XSTUDIO=c8
+K_MC_EJECT=ca
+
+# others, from other platforms (not sure if they work anywhere):
+K_AUTOCONF=99
+K_CC=47
+K_DA=50
 K_REVEAL=2a
 K_TIME=26
 K_UPDATE=62
@@ -105,13 +110,8 @@ K_SIZE=64
 K_INDEX=70
 K_PREV=b2
 K_NEXT=b3
-K_DVR_HOME_USB=7c
-K_TV_RADIO=f0
 K_T_MODE=22
 K_MIX=24
-K_DASH_LIST=4c
-K_XSTUDIO=c8
-K_MC_EJECT=ca
 K_VOL_30=85
 K_VOL_50=86
 K_VOL_100=87
